# Rapport_v1.0

./: .gitignore  CLAUDE.md  Contact_Memory_Model.md  README.md  Rapport_v1.0_PRD.md  start.bat  start.sh
.claude/: settings.local.json
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/api/: auth.py  contacts.py  dependencies.py
backend/app/core/: config.py  security.py
backend/app/models/: database.py  models.py  schemas.py
backend/app/services/: contact_service.py  llm_service.py
frontend/: .hbuilderx  README_HBuilderX.md  index.html  package-lock.json  package.json  package.json.cli.bak  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  manifest.json  pages.json
frontend/src/api/: index.ts  request.ts
frontend/src/components/: EmotionSection.vue  InfoSection.vue  PlaybookSection.vue
frontend/src/pages/index/: index.vue
frontend/src/pages/login/: login.vue
frontend/src/pages/timeline/: timeline.vue
frontend/src/store/: auth.ts  contact.ts
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
